--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "vuex-class-crud",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "make rest api (graphQL on next step) very easy on vuejs",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "module": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "author": "Benamar BELARBI",
   "license": "MIT",
-  "directories": {
-    "lib": "dist",
-    "test": "tests"
-  },
   "files": [
-    "dist/*.js",
-    "dist/index.d.ts"
+    "dist",
+    "lib"
   ],
   "scripts": {
     "prepare": "tsc"
