--- a/examples/hello-crud/package.json
+++ b/examples/hello-crud/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "fix": "vue-cli-service lint --fix"
   },
   "dependencies": {
     "core-js": "^3.6.4",
@@ -13,8 +14,7 @@
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.6",
-    "vuex": "^3.1.3",
-    "vuex-class-crud": "^1.0.2"
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.26.0",
