--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "rxjs": "^6.5.5",
     "ts-utils2": "^1.0.7",
     "vue": "^2.6.11",
+    "vue-class-component": "^7.2.3",
     "vuex": "^3.3.0",
     "vuex-class": "^0.3.2"
   }
